--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-react": "^7.20.0",
     "mobx-react-devtools": "^6.1.1",
+    "prettier": "^2.0.5",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
@@ -26,6 +32,7 @@
   },
   "scripts": {
     "build": "webpack",
+    "lint": "eslint . --ext .ts,.tsx",
     "start": "webpack-dev-server"
   }
 }
