Begin adding bonus parts

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-jss": "^10.1.1"
   },
   "scripts": {
     "build": "webpack",
