--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/gapi.auth2": "^0.0.47",
         "@types/gapi.client.sheets": "^4.0.0",
         "@types/mocha": "^7.0.2",
+        "@types/node": "^12.12.2",
         "@types/raf": "^3.4.0",
         "@types/react-dom": "^16.9.8",
         "@typescript-eslint/eslint-plugin": "^3.1.0",
@@ -40,6 +41,7 @@
     },
     "dependencies": {
         "@fluentui/react": "^7.121.9",
+        "@microsoft/signalr": "^3.1.8",
         "mobx": "^5.15.4",
         "mobx-react": "^6.2.2",
         "mobx-sync": "^3.0.0",
