Use init instead of ci since we use yarn

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - run: npm run init
     - run: npm run build --if-present
     - run: npm run buildDemo
     - run: npm run lint
