--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@typescript-eslint/parser": "^5.31.0",
         "@vitejs/plugin-react": "^1.3.2",
         "chai": "^4.3.0",
+        "copyfiles": "^2.4.1",
         "eslint": "^8.20.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-mobx": "^0.0.9",
@@ -62,7 +63,7 @@
         "build": "tsc",
         "lint": "eslint . --ext .ts,.tsx",
         "lintFix": "eslint . --fix --ext .ts,.tsx",
-        "prepublish": "copy package.json out && copy README.md out && copy LICENSE out",
+        "prepublish": "copyfiles package.json README.md LICENSE out",
         "test": "mocha --recursive tests/**/*.ts --exit --check-leaks -r tests/TestInit.js -r ts-node/register -r tsconfig-paths/register",
         "dev": "vite --https",
         "buildDemo": "tsc && vite build --mode production",
