--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,12 +19,13 @@
                 "-r",
                 "tsconfig-paths/register"
             ],
-            "internalConsoleOptions": "openOnSessionStart",
+            "internalConsoleOptions": "neverOpen",
             "name": "Mocha Tests",
             "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
             "request": "launch",
             "skipFiles": ["<node_internals>/**"],
-            "type": "pwa-node"
+            "type": "node",
+            "console": "integratedTerminal"
         },
         {
             "type": "chrome",
